[gd_scene load_steps=11 format=2]

[ext_resource path="res://Bait/Scenes/BaitKinematic.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Fishing/Scripts/physics_observer.gd" type="Script" id=2]
[ext_resource path="res://Controller/Scenes/MouseController.tscn" type="PackedScene" id=3]
[ext_resource path="res://Line/Scenes/Line.tscn" type="PackedScene" id=4]
[ext_resource path="res://Controller/Scripts/fishing_controller.gd" type="Script" id=5]
[ext_resource path="res://Rod/Scenes/Rod.tscn" type="PackedScene" id=6]
[ext_resource path="res://Reel/Scenes/Reel.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/Scenes/ReelingUI.tscn" type="PackedScene" id=8]
[ext_resource path="res://Fish/Scenes/TestFish.tscn" type="PackedScene" id=9]
[ext_resource path="res://Camera/Scripts/camera_controller.gd" type="Script" id=10]

[node name="Fishing" type="Node"]

[node name="Loadout" type="Node" parent="."]

[node name="Rod" parent="Loadout" instance=ExtResource( 6 )]
action = 100

[node name="BaitKinematic" parent="Loadout" instance=ExtResource( 1 )]

[node name="Line" parent="Loadout" instance=ExtResource( 4 )]

[node name="Reel" parent="Loadout" instance=ExtResource( 7 )]
REEL_SPEED = 5.0
MAX_REEL_SPEED = 8.0
RPT = 28.0
MAX_REEL_DRAG = 20.0
DRAG = 1.0
CAPACITY_MONO = 170.0
CAPACITY_TEST_MONO = 8.0
CAPACITY_BRAID = 140.0
CAPACITY_TEST_BRAID = 20.0
GEAR_RATIO = 6.2

[node name="PhysicsObserver" type="Node" parent="Loadout"]
script = ExtResource( 2 )

[node name="FishingController" type="Node" parent="Loadout"]
script = ExtResource( 5 )

[node name="MouseController" parent="Loadout" instance=ExtResource( 3 )]

[node name="CameraController" type="Node" parent="Loadout"]
script = ExtResource( 10 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ReelingUI" parent="CanvasLayer" instance=ExtResource( 8 )]
visible = false

[node name="TestFish" parent="." instance=ExtResource( 9 )]

[connection signal="on_catch_area_entered" from="Loadout/Rod" to="Loadout/BaitKinematic" method="_on_Rod_on_catch_area_entered"]
[connection signal="on_catch_area_entered" from="Loadout/Rod" to="Loadout/PhysicsObserver" method="_on_Rod_on_catch_area_entered"]
[connection signal="on_reeling" from="Loadout/Rod" to="Loadout/Line" method="_on_Rod_on_reeling"]
[connection signal="on_rod_tip_move" from="Loadout/Rod" to="Loadout/BaitKinematic" method="_on_Rod_on_rod_tip_move"]
[connection signal="on_rod_tip_move" from="Loadout/Rod" to="Loadout/Line" method="_on_Rod_on_rod_tip_move"]
[connection signal="on_castable" from="Loadout/BaitKinematic" to="Loadout/PhysicsObserver" method="_on_BaitKinematic_on_castable"]
[connection signal="on_drop" from="Loadout/BaitKinematic" to="Loadout/PhysicsObserver" method="_on_BaitKinematic_on_drop"]
[connection signal="on_move" from="Loadout/BaitKinematic" to="Loadout/Rod" method="_on_BaitKinematic_on_move"]
[connection signal="on_move" from="Loadout/BaitKinematic" to="Loadout/Line" method="_on_BaitKinematic_on_move"]
[connection signal="on_move" from="Loadout/BaitKinematic" to="Loadout/Reel" method="_on_BaitKinematic_on_move"]
[connection signal="on_move" from="Loadout/BaitKinematic" to="Loadout/PhysicsObserver" method="_on_BaitKinematic_on_move"]
[connection signal="on_bail_flipped" from="Loadout/Reel" to="Loadout/Line" method="_on_Reel_on_bail_flipped"]
[connection signal="on_reel_ready" from="Loadout/Reel" to="Loadout/Rod" method="_on_Reel_on_reel_ready"]
[connection signal="on_reeling" from="Loadout/Reel" to="Loadout/Rod" method="_on_Reel_on_reeling"]
[connection signal="on_reeling" from="Loadout/Reel" to="Loadout/BaitKinematic" method="_on_Reel_on_reeling"]
[connection signal="on_reeling" from="Loadout/Reel" to="Loadout/Line" method="_on_Reel_on_reeling"]
[connection signal="on_reeling" from="Loadout/Reel" to="CanvasLayer/ReelingUI" method="_on_Reel_on_reeling"]
[connection signal="on_cast" from="Loadout/PhysicsObserver" to="Loadout/BaitKinematic" method="_on_PhysicsObserver_on_cast"]
[connection signal="on_state_change" from="Loadout/PhysicsObserver" to="Loadout/Rod" method="_on_PhysicsObserver_on_state_change"]
[connection signal="on_state_change" from="Loadout/PhysicsObserver" to="Loadout/BaitKinematic" method="_on_PhysicsObserver_on_state_change"]
[connection signal="on_state_change" from="Loadout/PhysicsObserver" to="Loadout/Line" method="_on_PhysicsObserver_on_state_change"]
[connection signal="on_state_change" from="Loadout/PhysicsObserver" to="Loadout/Reel" method="_on_PhysicsObserver_on_state_change"]
[connection signal="on_state_change" from="Loadout/PhysicsObserver" to="Loadout/FishingController" method="_on_PhysicsObserver_on_state_change"]
[connection signal="on_state_change" from="Loadout/PhysicsObserver" to="Loadout/CameraController" method="_on_PhysicsObserver_on_state_change"]
[connection signal="on_state_change" from="Loadout/PhysicsObserver" to="TestFish" method="_on_PhysicsObserver_on_state_change"]
[connection signal="on_cast" from="Loadout/FishingController" to="Loadout/PhysicsObserver" method="_on_FishingController_on_cast"]
[connection signal="on_load" from="Loadout/FishingController" to="Loadout/Rod" method="_on_FishingController_on_load"]
[connection signal="on_reeling" from="Loadout/FishingController" to="Loadout/PhysicsObserver" method="_on_FishingController_on_reeling"]
[connection signal="on_set" from="Loadout/FishingController" to="Loadout/PhysicsObserver" method="_on_FishingController_on_set"]
[connection signal="on_new_angle" from="Loadout/MouseController" to="Loadout/Rod" method="_on_MouseController_on_new_angle"]
[connection signal="on_new_angle" from="Loadout/MouseController" to="Loadout/PhysicsObserver" method="_on_MouseController_on_new_angle"]
[connection signal="on_wheel_move" from="Loadout/MouseController" to="Loadout/Reel" method="_on_MouseController_on_wheel_move"]
[connection signal="on_wheel_move" from="Loadout/MouseController" to="Loadout/FishingController" method="_on_MouseController_on_wheel_move"]
[connection signal="on_bait_camera" from="Loadout/CameraController" to="Loadout/BaitKinematic" method="_on_CameraController_on_bait_camera"]
[connection signal="on_rod_camera" from="Loadout/CameraController" to="Loadout/Rod" method="_on_CameraController_on_rod_camera"]
[connection signal="on_fight" from="TestFish" to="Loadout/Rod" method="_on_TestFish_on_fight"]
[connection signal="on_hook" from="TestFish" to="Loadout/PhysicsObserver" method="_on_TestFish_on_hook"]
[connection signal="on_miss" from="TestFish" to="Loadout/PhysicsObserver" method="_on_TestFish_on_miss"]
[connection signal="on_strike" from="TestFish" to="Loadout/PhysicsObserver" method="_on_TestFish_on_strike"]
